🐛 Fix overflow hidden of illustration

--- a/css/modules.css
+++ b/css/modules.css
@@ -27,17 +27,6 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  animation: illustionPositionKeyframe 10s infinite alternate ease-in-out;
-}
-
-@keyframes illustionPositionKeyframe {
-  from {
-    object-position: 50% 25%;
-  }
-  to {
-    object-position: 50% 75%;
-    transform: scale(1.1);
-  }
 }
 
 .weatherIllustration__wrapper::after {
@@ -561,7 +550,21 @@
     transform: translate3d(-50%, 0, 0);
     margin-top: 10px;
     margin-bottom: 26px;
-    background-size: 100% auto;
+    background-size: 100% uto;
+  }
+
+  .weatherIllustration__image {
+    animation: illustionPositionKeyframe 10s infinite alternate ease-in-out;
+  }
+
+  @keyframes illustionPositionKeyframe {
+    from {
+      object-position: 50% 25%;
+    }
+    to {
+      object-position: 50% 75%;
+      transform: scale(1.1);
+    }
   }
 
   .weatherWeekItem ~ .weatherWeekItem,
